--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.7.0",
     "framer-motion": "^6.3.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
